haskell-devscripts (0.8.16) UNRELEASED; urgency=low

  * Remove some unnecssary build-depends version constraints (found by cme)
  * Avoid adding dependencies on libffi and libgmp to libghc-*-foo (Closes:
    639015)

 -- Joachim Breitner <nomeata@debian.org>  Fri, 24 May 2013 09:22:52 +0200

haskell-devscripts (0.8.15) experimental; urgency=low

  * dh_haskell_blurbs added, provides substitution variables for the common
    package description blurbs, and also for reading the package description
    from the Source’s Description field.
    Until http://bugs.debian.org/680871 is fixed this does not work well for
    packages with multiple paragraphs in their description.

 -- Joachim Breitner <nomeata@debian.org>  Fri, 17 May 2013 21:51:33 +0200

haskell-devscripts (0.8.14) experimental; urgency=low

  * Explicitly mention which Prelude to use in dh_haskell_shlibdeps, thanks to
    Clifford Beshers for the patch.
  * Use cdbsn' $(DEB_PACKAGES) instead of parsing debian/control to see if
    profiling is desired.
  * Support installing Cabal-built binaries: Put the name of the binary in
    debian/pkg.haskell-binaries to ship the binary in that package
  * Add GHC-Package field to the Packages file

 -- Joachim Breitner <nomeata@debian.org>  Sat, 11 May 2013 14:24:37 +0200

haskell-devscripts (0.8.13) experimental; urgency=low

  [ Joachim Breitner ]
  * Improve parsing of "Setup register" output, patch by David Fox
  * Enable creation of hoogle files, thanks to Kiwamu Okabe for the
    suggestion.

  [ Kiwamu Okabe ]
  * Need --html option to fix bug that --hoogle option don't output html file.
  * Support to create /usr/lib/ghc-doc/hoogle/*.txt for hoogle package.

  [ Joachim Breitner ]
  * Symlink hoogle’s txt files to /usr/lib/ghc-doc/hoogle/
  * Bump ghc dependency to 7.6
  * Bump standards version

 -- Joachim Breitner <nomeata@debian.org>  Mon, 08 Oct 2012 21:14:50 +0200

haskell-devscripts (0.8.12) unstable; urgency=low
